[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "radioco"
authors = [
  {name = "Iago Veloso Abelo"},
  {name = "Stefan Walluhn"},
]
version = "3.0.0"
readme = "README.rst"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "Django<5",
  "Pillow",
  "django-ckeditor",
  "django-disqus",
  "django-filebrowser",
  "django-filter",
  "django-grappelli",
  "django-npm",
  "django-recurrence",
  "djangorestframework<3.15",	# https://github.com/encode/django-rest-framework/issues/9299
  "python-dateutil",
]

[project.urls]
Repository = "https://github.com/RadioCorax/radioco"
